NEG/svc-zoneprinter-1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zoneprinter-1
  name: zoneprinter-1
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: zoneprinter-1
  type: NodePort
