NEG/svc-zoneprinter-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  loadBalancerIP: 34.121.14.208
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: hello-world
  type: NodePort
