NEG/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: zoneprinter-1
            port:
              number: 80
      - path: /hello-world
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world
            port:
              number: 80
